Adds in placeholder for possible future aura:// custom url to Info.plist

--- a/iOS_Aura/Info.plist
+++ b/iOS_Aura/Info.plist
@@ -48,7 +48,8 @@
 			<array>
 				<string>aylacontrol</string>
 				<string>AgileLink</string>
-                <string>AylaSmartPlug</string>
+				<string>AylaSmartPlug</string>
+				<string>aura</string>
 			</array>
 		</dict>
 	</array>
