Fixes support for new url scheme

--- a/iOS_Aura/Info.plist
+++ b/iOS_Aura/Info.plist
@@ -26,7 +26,7 @@
 				<string>aylacontrol</string>
 				<string>AgileLink</string>
 				<string>AylaSmartPlug</string>
-				<string>aura</string>
+				<string>auracontrol</string>
 			</array>
 		</dict>
 	</array>
