--- a/iOS_Aura/Info.plist
+++ b/iOS_Aura/Info.plist
@@ -103,6 +103,8 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSBluetoothPeripheralUsageDescription</key>
+	<string>Aura is requesting access to Bluetooth to manage nearby compatible devices.</string>
 	<key>UTExportedTypeDeclarations</key>
 	<array>
 		<dict>
